--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -35,6 +35,7 @@ release:
   only:
     - tags
   script:
+    - npm run build
     - echo '//registry.npmjs.org/:_authToken=${NPM_TOKEN}'>.npmrc
     - if [ ${CI_COMMIT_TAG:0:1} = "v" ]; then npm publish --access public; fi
   tags:
