--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "build": "cross-env NODE_ENV=production babel -D src -d build",
     "build:dev": "cross-env NODE_ENV=development babel -D -w src --out-dir build",
     "clean": "rm -rf build",
+    "coverage": "cross-env NODE_ENV=test nyc mocha tests/*.test.js",
     "lint": "eslint src",
     "prepublish": "npm run build",
-    "test": "exit 0"
+    "test": "mocha tests/*.test.js"
   },
   "repository": {
     "type": "git",
