--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "clean": "rm -rf build",
     "coverage": "cross-env NODE_ENV=test nyc mocha tests/*.test.js",
     "lint": "eslint src",
-    "prepublish": "npm run build",
+    "prepack": "npm run build",
     "test": "mocha tests/*.test.js"
   },
   "repository": {
