--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "build/index.js",
   "scripts": {
     "build": "cross-env NODE_ENV=production babel -D src -d build",
-    "build:dev": "cross-env NODE_ENV=development babel -D -w src --out-dir build",
+    "build:dev": "cross-env NODE_ENV=development babel --verbose -D -w src --out-dir build",
     "clean": "rm -rf build",
     "coverage": "cross-env NODE_ENV=test nyc mocha tests/*.test.js",
     "lint": "eslint src",
@@ -56,6 +56,6 @@
     "prettier": "^1.5.3"
   },
   "dependencies": {
-    "mysql2": "^2.0.0-alpha1"
+    "mysql2": "^2.0.0"
   }
 }
