--- a/package.json
+++ b/package.json
@@ -28,19 +28,19 @@
   },
   "homepage": "https://github.com/authkeys/node-mysql-connman#readme",
   "devDependencies": {
-    "@babel/cli": "^7.5.5",
-    "@babel/core": "^7.5.5",
-    "@babel/plugin-proposal-class-properties": "^7.5.5",
-    "@babel/preset-env": "^7.5.5",
-    "@babel/register": "^7.5.5",
+    "@babel/cli": "^7.11.6",
+    "@babel/core": "^7.11.6",
+    "@babel/plugin-proposal-class-properties": "^7.10.4",
+    "@babel/preset-env": "^7.11.5",
+    "@babel/register": "^7.11.5",
     "@istanbuljs/nyc-config-babel": "^2.1.1",
     "babel-plugin-istanbul": "^5.2.0",
     "chai": "^4.2.0",
     "cross-env": "^5.2.0",
-    "mocha": "^6.0.2",
-    "mocha-junit-reporter": "^1.18.0",
+    "mocha": "^6.2.3",
+    "mocha-junit-reporter": "^1.23.3",
     "mocha-multi-reporters": "^1.1.7",
-    "mocha-parallel-tests": "^2.0.6-alpha.3",
+    "mocha-parallel-tests": "^2.3.0",
     "nyc": "^14.1.1"
   },
   "optionalDependencies": {
@@ -56,6 +56,6 @@
     "prettier": "^1.5.3"
   },
   "dependencies": {
-    "mysql2": "^2.0.0"
+    "mysql2": "^2.1.0"
   }
 }
