--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "nyc": "^14.1.1"
   },
   "optionalDependencies": {
+    "@fluidware-it/opentracing-injector": "^0.2.0",
     "babel-eslint": "^10.0.2",
     "eslint": "^6.0.1",
     "eslint-config-prettier": "^6.0.0",
